# global-traits

./: .gitignore  CLAUDE.md  generate_static.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: CNAME  index.html
docs/static/: authors.tsv  style.css
posthog-proxy/: package.json  pnpm-lock.yaml  wrangler.toml
posthog-proxy/src/: worker.js
static/: authors.tsv  style.css
templates/: index.html
