[project]
name = "cit-sci-traits-2024-page"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "CC BY 4.0" }
authors = [ { name = "Daniel Lusk", email = "daniel.lusk@geosense.uni-freiburg.de" } ]
dependencies = [
    "flask>=3.1.2",
    "pandas>=2.3.2",
]
